<resources>
    <string name="app_name">Kilkari</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Profile">Baby profile</string>
    <string name="ChildBirth">Childbirth Classes</string>
    <string name="Preg">Pregnancy</string>
    <string name="New">NewBorn</string>
    <string name="Growth">Track Baby\'s Growth</string>
    <string name="Exercise">Exercise</string>
    <string name="Doctor">Consult Doctor</string>
    <string name="BabySitter">Find BabySitter</string>
    <string name="reminder">Reminder</string>
    <string name="findDoctor">Find Doctor</string>
    <string name="title_activity_baby_profile">BabyProfile</string>
    <string name="title_activity_new_born">NewBorn</string>
    <string name="title_activity_track_growth">TrackGrowth</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="article1">"Things to Do to Have a Healthy Pregnancy \n\n There are so many things that you might think do not really have any bearing on whether or not you and your partner have a healthy baby, but the more we study, the more we find that what you do before you get pregnant or before you know you are pregnant really does have a huge effect on the health of your pregnancy and baby for a lifetime."</string>
</resources>
